Realign java25 with main and set Java 25 toolchain